# testTaskSvirski

./: README.md  pyproject.toml
coolsite/coolsite/: settings.py  urls.py
coolsite/user/: forms.py  urls.py  views.py
coolsite/user/templates/users/: base.html  homepage.html  login.html  registration.html
